--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -37,3 +37,5 @@
   background-color: #f66;
   font-family: Dosis, 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif
 }
+// 首行缩进两字符
+// .post-body p { text-indent: 2em; }
